[AH] 알코올 히스토리 생성 api 스웨거 작성
